cuadrarfotos_passwords_elegirtypeform

--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 p-0" style="min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="." style="object-fit: cover;"><p class=".center">foto aqui</p>
+                    <img class="position-absolute w-100 h-100" src="img\inicio.jpg" style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="container timeline position-relative p-0">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid mr-md-3" src="img/story-1.jpg" alt="">
+                        <img class="img-fluid mr-md-3" src="img/comienzo.jpg" alt="">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
@@ -105,12 +105,12 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
-                        <img class="img-fluid ml-md-3" src="img/story-2.jpg" alt="">
+                        <img class="img-fluid ml-md-3" src="img/flechazo.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 text-center text-md-right">
-                        <img class="img-fluid ml-md-3" src="img/story-4.jpg" alt="">
+                        <img class="img-fluid ml-md-3" src="img/decision.jpg" alt="">
                     </div>
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
@@ -141,7 +141,7 @@
             </div>
             <div class="center">
                     <div class="text-center">
-                        <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
+                        <!-- <img class="img-fluid mb-4" src="img/event-1.jpg" alt=""> -->
                         <h4 class="mb-3">Ceremonia</h4>
                         <p class="mb-2">Víctor y sus nervios os recibirán desde las 19h.</p>
                         <p class="mb-2">La ceremonia comenzará a las 19:30h.</p>
@@ -218,46 +218,14 @@
                 <h1 class="font-secondary display-4">Typeform</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="text-center">
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-sm-6">
-                                    <input type="text" class="form-control bg-secondary border-0 py-4 px-3" placeholder="Your Name"/>
-                                </div>
-                                <div class="form-group col-sm-6">
-                                    <input type="email" class="form-control bg-secondary border-0 py-4 px-3" placeholder="Your Email"/>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-sm-6">
-                                    <select class="form-control bg-secondary border-0" style="height: 52px;">
-                                        <option>Number of Guest</option>
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-sm-6">
-                                    <select class="form-control bg-secondary border-0" style="height: 52px;">
-                                        <option>I'm Attending</option>
-                                        <option>All Events</option>
-                                        <option>Wedding Party</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control bg-secondary border-0 py-2 px-3" rows="5" placeholder="Message" required="required"></textarea>
-                            </div>
-                            <div>
-                                <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+            <h1>Incrustado</h1>
+            <div data-tf-widget="PDalxw" data-tf-opacity="100" data-tf-iframe-props="title=Boda formulario" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
+            <script src="//embed.typeform.com/next/embed.js"></script>
+            <h1>Pagina Entera</h1>
+            <button><a href="typeform.html">ENLANCE A TYPEFORM</a></button>
+            <h1>Ventana Emergente</h1>
+            <button data-tf-popup="PDalxw" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Boda formulario" data-tf-transitive-search-params data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#cfa662;color:#787d56;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Acceder a formulario</button>
+            <script src="//embed.typeform.com/next/embed.js"></script>
         </div>
     </div>
     <!-- RSVP End -->
