--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>	
 <!-- Main Body Start -->
 	<div class="container-fluid p-0 mb-5 pb-5" id="home">
-		<img class="position-absolute h-100 w-100" src="img\testing_img_wed_web.jpg" style="object-fit: cover;">
+		<img class="position-absolute h-100 w-100" src="img\wed_ring_index.jpg" style="object-fit: cover;">
 		<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 			<div class="p-3" style="max-width: 900px;">
 				<h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Almudena & Victor</h1>
