photos_and_pass

--- a/main.html
+++ b/main.html
@@ -91,7 +91,6 @@
                     <div class="col-md-6 text-center text-md-left">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 ml-md-3">
                             <h4 class="mb-2">El comienzo</h4>
-                            <p class="text-uppercase mb-2">xx xx xx</p>
                             <p class="m-0">Todo comenzó cuando parecía que los dos estaban muy perdidos. La cancelación de un concierto y las ganas de él de poner cara a esa voz tan bonita.</p>
                         </div>
                     </div>
@@ -100,7 +99,6 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">El flechazo</h4>
-                            <p class="text-uppercase mb-2">xx xxxx xxxx</p>
                             <p class="m-0">Ella se plantó en Vallecas. Fueron a cenar y después de la única copa que se han tomado juntos comenzó esta historia.</p>
                         </div>
                     </div>
@@ -153,7 +151,9 @@
 			<br>
 			<div class="section-title position-relative text-center">
                 <i class="far fa-heart text-dark"></i>
+                <br>
             </div>
+            <p class="position-relative text-center"><i> A INDICAR EN EL FORMULARIO</i></p>
 			<div class="row justify-content-center">
                 <div class="col-md-6 border-right border-primary">
                     <div class="text-center">
@@ -174,8 +174,6 @@
                         <p class="mb-2">¿Cómo llegar a una noche inolvidable?</p>
                         <p class="mb-0">Habrá autobuses para ir y volver del lugar de la ceremonia</p>
                         <p class="mb-0">Punto de salida en el hotel</p>
-                        <br>
-                        <p class="mb-0"><i>INDICAR EN EL FORMULARIO PARA UN HUECO</i></p>
                     </div>
                 </div>
             </div>
@@ -218,13 +216,7 @@
                 <h1 class="font-secondary display-4">Typeform</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
-            <h1>Incrustado</h1>
             <div data-tf-widget="PDalxw" data-tf-opacity="100" data-tf-iframe-props="title=Boda formulario" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
-            <script src="//embed.typeform.com/next/embed.js"></script>
-            <h1>Pagina Entera</h1>
-            <button><a href="typeform.html">ENLANCE A TYPEFORM</a></button>
-            <h1>Ventana Emergente</h1>
-            <button data-tf-popup="PDalxw" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Boda formulario" data-tf-transitive-search-params data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#cfa662;color:#787d56;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Acceder a formulario</button>
             <script src="//embed.typeform.com/next/embed.js"></script>
         </div>
     </div>
