photos_and_passwords

--- a/main.html
+++ b/main.html
@@ -201,7 +201,7 @@
                 <div class="text-center">
                     <img class="img-fluid mb-4" src="img\lunamiel.jpg" alt="">
                     <h4 class="mb-3">DATOS DE CUENTA</h4>
-                    <p class="mb-2">Nº IBAN<br>Concepto: Boda Almu y Víctor</p>
+                    <p class="mb-2">ES73 0049 5983 4128 1606 8364<br>Concepto: Boda Almu y Víctor</p>
                 </div>
             </div>
         </div>
