photos_and_pass

--- a/main.html
+++ b/main.html
@@ -54,9 +54,6 @@
     <div class="container-fluid py-5" id="about">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Inicio</h6>
-                <i class="fa fa-female text-dark"></i>
-                <i class="fa fa-male text-dark"></i>
                 <h1 class="font-secondary display-4">Los novios</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -201,7 +198,7 @@
                 <div class="text-center">
                     <img class="img-fluid mb-4" src="img\lunamiel.jpg" alt="">
                     <h4 class="mb-3">DATOS DE CUENTA</h4>
-                    <p class="mb-2">ES73 0049 5983 4128 1606 8364<br>Concepto: Boda Almu y Víctor</p>
+                    <p class="mb-2">ES 73 0049 5983 41 2816068364<br>Concepto: Boda Almu y Víctor</p>
                 </div>
             </div>
         </div>
