--- a/main.html
+++ b/main.html
@@ -74,7 +74,6 @@
 
     <!-- Story Start -->
     <div class="container-fluid py-5" id="story">
-        <div class="container pt-5 pb-3">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6>
                 <h1 class="font-secondary display-4">Nuestra historia de amor</h1>
@@ -117,13 +116,11 @@
 
                 </div>
             </div>
-        </div>
     </div>
     <!-- Story End -->
 
 	<!-- Event Start -->
     <div class="container-fluid py-5" id="event">
-        <div class="container py-5">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6>
                 <h1 class="font-secondary display-4">Bodorrio</h1>
@@ -159,7 +156,7 @@
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
                         <p class="mb-2">Recomendamos este hotel para quienes quieran dormir fuera de casa esa noche</p>
                         <br>
-						<p class="mb-0"><a href="https://www.hoteles-silken.com/es/hotel-puerta-madrid/galeria/" target="_blank">Hotel Puerta Madrid</a></p>
+						<p class="mb-0"><a href="https://www.hoteles-silken.com/es/hotel-puerta-madrid/galeria/" target="_blank">Hotel Silken Puerta Madrid</a></p>
 						<p class="mb-0">C. Juan Rizi, 5, 28027 Madrid</p>
                     </div>
                 </div>
@@ -174,7 +171,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
     <!-- Event End -->
 
@@ -220,7 +216,6 @@
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white py-5" id="contact" style="margin-top: 90px;">
-        <div class="container text-center py-5">
             <div class="section-title position-relative text-center">
                 <h1 class="font-secondary display-3 text-white">Thank You</h1>
                 <i class="far fa-heart text-white"></i>
@@ -229,7 +224,6 @@
                 <!--/*** This is a template edited by: ***/-->
                 Designed By <a class="border-bottom" href="https://www.linkedin.com/in/albafdezgomez2000/" target="_blank">GreenGirlEyes</a>&amp;<a class="border-bottom" href="https://www.linkedin.com/in/marcofs/" target="_blank">Greenz</a>
             </div>
-        </div>
     </div>
     <!-- Footer End -->
 
