photos_and_passwords

--- a/main.html
+++ b/main.html
@@ -220,7 +220,7 @@
                 <h1 class="font-secondary display-3 text-white">Thank You</h1>
                 <i class="far fa-heart text-white"></i>
             </div>
-            <div class="mb-2 text-center" text-align="right">
+            <div class="mb-2 text-center">
                 <!--/*** This is a template edited by: ***/-->
                 Designed By <a class="border-bottom" href="https://www.linkedin.com/in/albafdezgomez2000/" target="_blank">GreenGirlEyes</a>&amp;<a class="border-bottom" href="https://www.linkedin.com/in/marcofs/" target="_blank">Greenz</a>
             </div>
