--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
     <!-- About End -->
 
 
-    <!-- Story Start -->
+    <!-- Story Start 
     <div class="container-fluid py-5" id="story">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6>
@@ -117,9 +117,9 @@
                 </div>
             </div>
     </div>
-    <!-- Story End -->
+    Story End -->
 
-	<!-- Event Start -->
+	<!-- Event Start 
     <div class="container-fluid py-5" id="event">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6>
@@ -133,7 +133,6 @@
             </div>
             <div class="center">
                     <div class="text-center">
-                        <!-- <img class="img-fluid mb-4" src="img/event-1.jpg" alt=""> -->
                         <h4 class="mb-3">Ceremonia</h4>
                         <p class="mb-2">Víctor y sus nervios os recibirán desde las 19h.</p>
                         <p class="mb-2">La ceremonia comenzará a las 19:30h.</p>
@@ -172,9 +171,9 @@
                 </div>
             </div>
     </div>
-    <!-- Event End -->
+     Event End -->
 
-	<!-- Gift Start -->
+	<!-- Gift Start 
     <div class="container-fluid py-5" id="regalo">
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Regalo</h6>
@@ -197,7 +196,7 @@
                 </div>
             </div>
     </div>
-    <!-- Gift End -->
+     Gift End -->
 
     <!-- FORM Start -->
     <div class="container-fluid py-5" id="rsvp">
