photos_and_passwords

--- a/main.html
+++ b/main.html
@@ -72,10 +72,10 @@
     <!-- About End -->
 
 
-    <!-- Story Start 
+    <!-- Story Start -->
     <div class="container-fluid py-5" id="story">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6> -->
                 <h1 class="font-secondary display-4">Nuestra historia de amor</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -117,12 +117,12 @@
                 </div>
             </div>
     </div>
-    Story End -->
+    <!-- Story End -->
 
-	<!-- Event Start 
+	<!-- Event Start -->
     <div class="container-fluid py-5" id="event">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6> -->
                 <h1 class="font-secondary display-4">Bodorrio</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -133,6 +133,7 @@
             </div>
             <div class="center">
                     <div class="text-center">
+                        <!-- <img class="img-fluid mb-4" src="img/event-1.jpg" alt=""> -->
                         <h4 class="mb-3">Ceremonia</h4>
                         <p class="mb-2">Víctor y sus nervios os recibirán desde las 19h.</p>
                         <p class="mb-2">La ceremonia comenzará a las 19:30h.</p>
@@ -171,12 +172,12 @@
                 </div>
             </div>
     </div>
-     Event End -->
+    <!-- Event End -->
 
-	<!-- Gift Start 
+	<!-- Gift Start -->
     <div class="container-fluid py-5" id="regalo">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Regalo</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Regalo</h6> -->
                 <h1 class="font-secondary display-4">Súper regalo</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
@@ -196,13 +197,13 @@
                 </div>
             </div>
     </div>
-     Gift End -->
+    <!-- Gift End -->
 
     <!-- FORM Start -->
     <div class="container-fluid py-5" id="rsvp">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Formulario</h6>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Formulario</h6> -->
                 <h1 class="font-secondary display-4">Typeform</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
