--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@
     <div class="container-fluid py-5" id="event">
             <div class="section-title position-relative text-center">
                 <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6> -->
-                <h1 class="font-secondary display-4">Bodorrio</h1>
+                <h1 class="font-secondary display-4">Evento</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row justify-content-center">
