photos_and_passwords

--- a/main.html
+++ b/main.html
@@ -167,7 +167,7 @@
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <p class="mb-2">¿Cómo llegar a una noche inolvidable?</p>
                         <p class="mb-0">Habrá autobuses para ir y volver del lugar de la ceremonia</p>
-                        <p class="mb-0">Punto de salida en el hotel</p>
+                        <p class="mb-0">Punto de salida en el hotel sobre las 18h</p>
                     </div>
                 </div>
             </div>
