--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">El flechazo</h4>
-                            <p class="m-0">Ella se plantó en Vallecas. Fueron a cenar y después de la única copa que se han tomado juntos comenzó esta historia.</p>
+                            <p class="m-0">Ella apareció en Vallecas. Fueron a cenar y después de la única copa que se han tomado juntos comenzó esta historia.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
