--- a/main.html
+++ b/main.html
@@ -54,6 +54,7 @@
     <div class="container-fluid py-5" id="about">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
+                <i><img src="img/pareja-de-boda.png" alt="pareja-de-boda"></i>
                 <h1 class="font-secondary display-4">Los novios</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
