--- a/main.html
+++ b/main.html
@@ -37,14 +37,14 @@
             <div class="navbar-nav ml-auto py-0">
                 <!-- <a href="#about" class="nav-item nav-link">Inicio</a> -->
                 <a href="#story" class="nav-item nav-link">Historia</a>
-                <a href="#event" class="nav-item nav-link">Evento</a>
+                <a href="#event" class="nav-item nav-link">Ceremonia</a>
             </div>
             <a href="#about" class="navbar-brand mx-5 d-none d-lg-block">
                 <h1 class="font-secondary text-white mb-n2">Almudena <span class="text-primary">&</span> Víctor</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
 				<a href="#regalo" class="nav-item nav-link">Regalo</a>
-                <a href="#rsvp" class="nav-item nav-link">Formulario</a>
+                <a href="#form" class="nav-item nav-link">Formulario</a>
             </div>
         </div>
     </nav>
@@ -59,14 +59,20 @@
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row m-0 mb-4 mb-md-0 pb-2 pb-md-0">
-                <div class="col-md-6 p-0 text-center text-md-right">
+                <div class="col-md-6 position-relative p-0 text-center text-md-center">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <p class="mb-2">"Que electricidad,<br>vaya conexión,<br> la complicidad de alta tensión<br>(...)"</p>
+                        <p class="mb-2">
+                            Para entenderlo todo escucha esto:
+                            <br>
+                            <br>
+                            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1ogJK57FglEe7kmbAQDi0v?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 p-0" style="min-height: 400px;">
                     <img class="position-absolute w-100 h-100" src="img\inicio.jpg" style="object-fit: cover;">
                 </div>
+                
             </div>
         </div>
     </div>
@@ -96,7 +102,7 @@
                     <div class="col-md-6 text-center text-md-right">
                         <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4 mr-md-3">
                             <h4 class="mb-2">El flechazo</h4>
-                            <p class="m-0">Ella apareció en Vallecas. Fueron a cenar y después de la única copa que se han tomado juntos comenzó esta historia.</p>
+                            <p class="m-0">Ella apareció por el Paseo Marítimo de la Albufera. Fueron a cenar y después de la única copa que se han tomado juntos comenzó esta historia.</p>
                         </div>
                     </div>
                     <div class="col-md-6 text-center text-md-left">
@@ -123,24 +129,18 @@
 	<!-- Event Start -->
     <div class="container-fluid py-5" id="event">
             <div class="section-title position-relative text-center">
-                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Evento</h6> -->
-                <h1 class="font-secondary display-4">Evento</h1>
+                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Ceremonia</h6> -->
+                <h1 class="font-secondary display-4">Ceremonia</h1>
                 <i class="far fa-heart text-dark"></i>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6 text-center">
-                    <h5 class="font-weight-normal text-muted mb-3 pb-3">Que pasará que misterio habrá puede ser mi gran noche</h5>
-                </div>
             </div>
             <div class="center">
                     <div class="text-center">
                         <!-- <img class="img-fluid mb-4" src="img/event-1.jpg" alt=""> -->
-                        <h4 class="mb-3">Ceremonia</h4>
                         <p class="mb-2">Víctor y sus nervios os recibirán desde las 19h.</p>
                         <p class="mb-2">La ceremonia comenzará a las 19:30h.</p>
-                        <p class="mb-0">19:00 - 04:00</p>
+                        <p class="mb-0">Duración total del evento: 19:00h. - 04:00h.</p>
                         <br>
-                        <p class="mb-2">Cam. de Correcaballos, s/n, 28750 San Agustín del Guadalix, Madrid</p>
+                        <p class="mb-2">Camino de Correcaballos, s/n, 28750 San Agustín del Guadalix, Madrid</p>
                 </div>
             </div>
 			<br>
@@ -159,6 +159,7 @@
                         <br>
 						<p class="mb-0"><a href="https://www.hoteles-silken.com/es/hotel-puerta-madrid/galeria/" target="_blank">Hotel Silken Puerta Madrid</a></p>
 						<p class="mb-0">C. Juan Rizi, 5, 28027 Madrid</p>
+                        <p class="mb-0">900 373 981</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -167,8 +168,9 @@
 						<h4 class="text-center">Transporte</h4>
                         <img class="img-fluid mb-4" src="img/event-2.jpg" alt="">
                         <p class="mb-2">¿Cómo llegar a una noche inolvidable?</p>
-                        <p class="mb-0">Habrá autobuses para ir y volver del lugar de la ceremonia</p>
-                        <p class="mb-0">Punto de salida en el hotel sobre las 18h</p>
+                        <p class="mb-0">Habrá autobús para ir y volver del lugar de la ceremonia</p>
+                        <p class="mb-0">Punto de salida en el hotel sobre las 18:00h.</p>
+                        <p class="mb-0">Punto de vuelta al hotel sobre las 04:00h.</p>
                     </div>
                 </div>
             </div>
@@ -185,8 +187,8 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <h5 class="font-weight-normal text-muted mb-3 pb-3">
-						<p>El regalo es opcional, la asistencia obligatoria.</p>
-						<p>Pero si quieres tener un detalle con nosotros que mejor regalo que nuestra luna de miel por las Islas Griegas.</p>
+						<p>El regalo es opcional, la asistencia obligatoria</p>
+						<p>Pero si quieres tener un detalle con nosotros que mejor regalo que nuestra luna de miel por las Islas Griegas</p>
 					</h5>
                 </div>
             </div>
@@ -194,25 +196,29 @@
                 <div class="text-center">
                     <img class="img-fluid mb-4" src="img\lunamiel.jpg" alt="">
                     <h4 class="mb-3">DATOS DE CUENTA</h4>
-                    <p class="mb-2">ES 73 0049 5983 41 2816068364<br>Concepto: Boda Almu y Víctor</p>
+                    <p class="mb-2">ES 73 0049 5983 41 2816068364
+                        <br>
+                        Concepto: Boda Almu y Víctor
+                        <br>
+                        Titular: Almudena Vitoria Fernández o Víctor Durán Ramos
+                    </p>
                 </div>
             </div>
     </div>
     <!-- Gift End -->
 
-    <!-- FORM Start -->
-    <div class="container-fluid py-5" id="rsvp">
+    <!-- Form Start -->
+    <div class="container-fluid py-5" id="form">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Formulario</h6> -->
-                <h1 class="font-secondary display-4">Typeform</h1>
+                <h1 class="font-secondary display-4">Formulario</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div data-tf-widget="PDalxw" data-tf-opacity="100" data-tf-iframe-props="title=Boda formulario" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div>
             <script src="//embed.typeform.com/next/embed.js"></script>
         </div>
     </div>
-    <!-- RSVP End -->
+    <!-- Form End -->
 
 
     <!-- Footer Start -->
