--- a/main.html
+++ b/main.html
@@ -62,6 +62,8 @@
                 <div class="col-md-6 position-relative p-0 text-center text-md-center">
                     <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
                         <p class="mb-2">
+                            <p class="mb-2">"Que electricidad,<br>vaya conexión,<br> la complicidad de alta tensión<br>(...)"</p>
+                            <br>
                             Para entenderlo todo escucha esto:
                             <br>
                             <br>
