--- a/main.html
+++ b/main.html
@@ -85,7 +85,7 @@
     <div class="container-fluid py-5" id="story">
             <div class="section-title position-relative text-center">
                 <!-- <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Story</h6> -->
-                <h1 class="font-secondary display-4">Nuestra historia de amor</h1>
+                <h1 class="font-secondary display-4">Nuestra historia</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="container timeline position-relative p-0">
