--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
                         <p class="mb-2">La ceremonia comenzará a las 19:30h.</p>
                         <p class="mb-0">Duración total del evento: 19:00h. - 04:00h.</p>
                         <br>
-                        <p class="mb-2">Camino de Correcaballos, s/n, 28750 San Agustín del Guadalix, Madrid</p>
+                        <p class="mb-2"><a href="https://www.google.com/maps/dir//Aal+Cachucho+%7C+Finca+de+Bodas+y+Eventos+-+Hotel+Rural,+Cam.+de+Correcaballos,+s%2Fn,+28750+San+Agust%C3%ADn+del+Guadalix,+Madrid/@40.6613123,-3.6423308,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0xd43d164034b2651:0xb092c69f460915cc!2m2!1d-3.6366206!2d40.6652784!3e0" target="_blank">Camino de Correcaballos, s/n, 28750 San Agustín del Guadalix, Madrid</a></p>
                 </div>
             </div>
 			<br>
